# Convo-Dataset-Pipeline

./: .gitignore  Mimi_32_Codebook_Dataset_Builder.ipynb  Qwen3_(14B)_Reasoning_Conversational.ipynb  README.md  pyproject.toml
docs/: dataset_card_template.md  generation.md  gpu_smoke_test.md  project_1_streaming_tts.md  project_2_half_duplex.md  project_3_full_duplex.md  realtime_training_plan.md
examples/: config.toml  mistral.config.toml  nim.config.toml
examples/fixtures/: scripts.jsonl
src/convo_ds/: __init__.py  audio.py  cli.py  config.py  hf_upload.py  jsonl.py  mimi.py  schemas.py  scripts.py  stage3.py  stage4.py  validation.py  zipvoice.py
tests/: test_config.py  test_hf_upload.py  test_mimi.py  test_scripts.py  test_stage3.py  test_stage4.py  test_validation.py  test_zipvoice.py
